# MCI

./: AdherentCellsInjectionPipeline.cpp  AdherentCellsInjectionPipeline.h  AdherentCellsMetrics.cpp  AdherentCellsMetrics.h  CMakeLists - Copy.txt  CMakeLists.txt  CapillaryMicroCellInjectionMetrics.cpp  CapillaryMicroCellInjectionMetrics.h  ExercisePipeline.cpp  ExercisePipeline.h  ICSISimulationMetrics.cpp  ICSISimulationMetrics.h  ICSiSimulationPipeline.cpp  ICSiSimulationPipeline.h  InitExercisePipeline.cpp  InitExercisePipeline.h  InjectorHandlingMetrics.cpp  InjectorHandlingMetrics.h  InjectorHandlingPipeline.cpp  InjectorHandlingPipeline.h  InjectorPositioningMetrics.cpp  InjectorPositioningMetrics.h  InjectorPositioningPipeline.cpp  InjectorPositioningPipeline.h  MainWindow - untitled  NUMICIS.csproj  NUMICIS.sln  New-User.Designer.cs  New-User.cs  New-User.resx  ObjectHandlingMetrics.cpp  ObjectHandlingMetrics.h  ObjectHandlingPipeline.cpp  ObjectHandlingPipeline.h  QtViewer.cpp  QtViewer.h  SphereHandlingMetrics.cpp  SphereHandlingMetrics.h  SphereHandlingPipeline.cpp  SphereHandlingPipeline.h  (+24 more)
Telecom & Network Team/Client APi/: comInterpt.sln
Telecom & Network Team/Client APi/comInterpt/: Program.cs  Program.cs~  comInterpt.csproj  packages.config
Telecom & Network Team/Client APi/comInterpt/Properties/: AssemblyInfo.cs
Telecom & Network Team/Source API/: comInterrup_source.sln  comInterrup_source.userprefs
Telecom & Network Team/Source API/comInterrup_source/: Program.cs  comInterrup_source.csproj
Telecom & Network Team/Source API/comInterrup_source/Properties/: AssemblyInfo.cs
Telecom & Network Team/Website/pubnub3/: index.html  source_index.html
Telecom & Network Team/Website/pubnub3/js/: index1.js  rtc-controller.js  source_index.js  webrtc.js
